optimize images to png

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ You will be working with a codebase (and a data pipeline) already under active d
 	      		</div>
 	      		<div class="col-sm-12 col-md-5">
 	      			<div class="app-screenshot">
-	      				 <img src="img/theater_dome.jpg" class="img-responsive" alt="The Dome">
+	      				 <img src="img/theater_dome.png" class="img-responsive" alt="The Dome">
 	      			</div>
 	      		</div>
 	      	
