Revert "test something odd about loading time when remote"
This reverts commit 2fc365ca5c57094a1252de549fa4991882f75752.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ You will be working with a codebase (and a data pipeline) already under active d
 	      		</div>
 	      		<div class="col-sm-12 col-md-5">
 	      			<div class="preview_gif">
-	      				<img src="img/status.gif" class="img-responsive" alt="Text Generation Animated">
+	      				<img src="img/generation_video.gif" class="img-responsive" alt="Text Generation Animated">
 	      			</div>
 	      		</div>
 			      	
