--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	  
 	   <!-- HEADER
 	   ================================================== -->	  
-	  <header>
+	  <section>
 		 <div class="container">
 			 <div class="row">
 				 <div class="col-md-12">
@@ -57,7 +57,7 @@
 				</div>	  
 			</div>    
 		</div>
-	 </header>
+	 </section>
 	  
 	  
 	  <!-- intro
@@ -129,10 +129,10 @@ You will be working with a codebase (and a data pipeline) already under active d
 	  			<div class="col-md-12 ">
 	  				<h1>Interested? </h1>
 
-	  				<p>If you are interested in text, theater and creativity this is an amazing opportunity. Please get in touch to find out more about the details.</p>
+	  				<p>If you are interested in text, theater and creativity we think you will find this a really intriguiing project. Please do get in touch to find out more about the details.</p>
 		<p>Some on-site work will be required over the summer. NY July/August 2017.</p>
 		<p>
-Please get in touch by email with a CV or bio, and if possible a link to some of your work or open source code contributions.</p>
+Please get in touch by email with a CV or bio, and if possible include a link to some of your work or open source code contributions.</p>
 
 	  				<p class="lead">Contact us at <a href="mailto:great_outdoors_programmer@gmail.com">great_outdoors_programmer@gmail.com</a></p>
 	  			</div>
