--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			 <div class="row">
 				 <div class="col-md-12">
 					  <h1>Hey Creative Coder</h1>
-					   <p class="lead">Sorry this position has now been filled. Thanks for your interest!</p>
+					   <p class="lead">Sorry, this position has now been filled. Thanks for your interest!</p>
 
 					  <p class="lead" style=" text-decoration:line-through">Here's your chance to go beyond 'interesting' creative coding challenges. We invite you to work with us on a bigger canvas. Put your python programming skills to work and create some amazing theater with us !</p>
 					  
